Resolved issue