@@ -28,10 +28,14 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.11.0</version>
+				<version>3.8.0</version>
 				<configuration>
-					<source>1.17</source>
-					<target>1.17</target>
+					<source>17</source>
+					<target>17</target>
+					 <compilerArgs>
+                      <arg>--add-exports</arg>
+                      <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                  </compilerArgs>
 					<systemPropertyVariables>
 						<property>
 							<invokeDriver>${invokeDriver}</invokeDriver>
@@ -78,6 +82,11 @@
 			<artifactId>extentreports</artifactId>
 			<version>5.0.8</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.18.28</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
